--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ var iTextPos = 0; // initialise text position
 var sContents = ''; // initialise contents variable
 var iRow; // initialise current row
              audio.play();
+                audio.loop=true;
+
 
 function typewriter()
 {
